--- a/usr/src/grub/grub-0.95/grub/Makefile.solaris
+++ b/usr/src/grub/grub-0.95/grub/Makefile.solaris
@@ -19,7 +19,7 @@ CFLAGS		+= -O2
 LINKFLAGS	+= -O2
 CPPFLAGS	+= -DGRUB_UTIL=1 -DFSYS_EXT2FS=1 -DFSYS_FAT=1 -DFSYS_FFS=1 \
 		   -DFSYS_ISO9660=1 -DFSYS_JFS=1 -DFSYS_MINIX=1 \
-		   -DFSYS_REISERFS=1 -DFSYS_UFS2=1 -DFSYS_VSTAFS=1 \
+		   -DFSYS_REISERFS=1 -DFSYS_ZFS=1 -DFSYS_UFS2=1 -DFSYS_VSTAFS=1 \
 		   -DFSYS_XFS=1 -DUSE_MD5_PASSWORDS=1 -DSUPPORT_HERCULES=1 \
 		   -DSUPPORT_SERIAL=1 
 
