--- a/usr/src/uts/sun4u/fpc/Makefile
+++ b/usr/src/uts/sun4u/fpc/Makefile
@@ -20,7 +20,7 @@
 #
 
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -47,6 +47,26 @@ LINTS		= $(FPC_OBJS:%.o=$(LINTS_DIR)/%.ln)
 ROOTMODULE	= $(ROOT_CHICAGO_DRV_DIR)/$(MODULE)
 CONF_SRCDIR	= $(UTSBASE)/sun4/io/fpc
 
+ROOT_BOSTON_DIR		= $(ROOT_PLAT_DIR)/SUNW,Sun-Fire-V445
+ROOT_BOSTON_MOD_DIR	= $(ROOT_BOSTON_DIR)/kernel
+ROOT_BOSTON_DRV_DIR_32	= $(ROOT_BOSTON_MOD_DIR)/drv
+ROOT_BOSTON_DRV_DIR_64	= $(ROOT_BOSTON_DRV_DIR_32)/$(SUBDIR64)
+
+ROOT_SEATTLE_DIR	= $(ROOT_PLAT_DIR)/SUNW,Sun-Fire-V215
+ROOT_SEATTLE_MOD_DIR	= $(ROOT_SEATTLE_DIR)/kernel
+ROOT_SEATTLE_DRV_DIR_32	= $(ROOT_SEATTLE_MOD_DIR)/drv
+ROOT_SEATTLE_DRV_DIR_64	= $(ROOT_SEATTLE_DRV_DIR_32)/$(SUBDIR64)
+
+ROOTMODULE_SOFTLINK	= $(ROOT_BOSTON_DRV_DIR_64:$(ROOT_BOSTON_DIR)%=../../../../SUNW,A70%/$(MODULE))
+
+CONFFILE_SOFTLINK	= $(ROOT_BOSTON_DRV_DIR_32:$(ROOT_BOSTON_DIR)%=../../../SUNW,A70%/$(CONFFILE))
+
+BOSTON_ROOTMODULE	= $(ROOT_BOSTON_DRV_DIR_64)/$(MODULE)
+BOSTON_CONFFILE		= $(ROOT_BOSTON_DRV_DIR_32)/$(CONFFILE)
+
+SEATTLE_ROOTMODULE	= $(ROOT_SEATTLE_DRV_DIR_64)/$(MODULE)
+SEATTLE_CONFFILE	= $(ROOT_SEATTLE_DRV_DIR_32)/$(CONFFILE)
+
 #
 #	Include common rules.
 #
@@ -57,7 +77,9 @@ include $(UTSBASE)/sun4u/chicago/Makefile.chicago
 #
 ALL_TARGET	= $(BINARY) $(SRC_CONFFILE)
 LINT_TARGET	= $(MODULE).lint
-INSTALL_TARGET	= $(BINARY) $(ROOTMODULE) $(ROOT_CONFFILE)
+INSTALL_TARGET	= $(BINARY) $(ROOTMODULE) $(ROOT_CONFFILE) \
+			$(BOSTON_ROOTMODULE) $(BOSTON_CONFFILE) \
+			$(SEATTLE_ROOTMODULE) $(SEATTLE_CONFFILE)
 
 #
 #	Include SUN4 and SUN4U specific headers files
@@ -102,6 +124,43 @@ modlintlib:	$(MODLINTLIB_DEPS)
 clean.lint:	$(CLEAN_LINT_DEPS)
 
 install:	$(INSTALL_DEPS)
+
+$(ROOT_BOSTON_DIR): $(ROOT_PLAT_DIR)
+	-$(INS.dir.root.sys)
+
+$(ROOT_BOSTON_MOD_DIR): $(ROOT_BOSTON_DIR)
+	-$(INS.dir.root.sys)
+
+$(ROOT_BOSTON_DRV_DIR_32): $(ROOT_BOSTON_MOD_DIR)
+	-$(INS.dir.root.sys)
+
+$(ROOT_BOSTON_DRV_DIR_64): $(ROOT_BOSTON_DRV_DIR_32)
+	-$(INS.dir.root.sys)
+
+$(ROOT_SEATTLE_DIR): $(ROOT_PLAT_DIR)
+	-$(INS.dir.root.sys)
+
+$(ROOT_SEATTLE_MOD_DIR): $(ROOT_SEATTLE_DIR)
+	-$(INS.dir.root.sys)
+
+$(ROOT_SEATTLE_DRV_DIR_32): $(ROOT_SEATTLE_MOD_DIR)
+	-$(INS.dir.root.sys)
+
+$(ROOT_SEATTLE_DRV_DIR_64): $(ROOT_SEATTLE_DRV_DIR_32)
+	-$(INS.dir.root.sys)
+
+$(BOSTON_ROOTMODULE): $(ROOTMODULE) $(ROOT_BOSTON_DRV_DIR_64)
+	$(RM) $@; $(SYMLINK) $(ROOTMODULE_SOFTLINK) $@
+
+$(BOSTON_CONFFILE): $(ROOT_CONFFILE) $(ROOT_BOSTON_DRV_DIR_32)
+	$(RM) $@; $(SYMLINK) $(CONFFILE_SOFTLINK) $@
+
+$(SEATTLE_ROOTMODULE): $(ROOTMODULE) $(ROOT_SEATTLE_DRV_DIR_64)
+	$(RM) $@; $(SYMLINK) $(ROOTMODULE_SOFTLINK) $@
+
+$(SEATTLE_CONFFILE): $(ROOT_CONFFILE) $(ROOT_SEATTLE_DRV_DIR_32)
+	$(RM) $@; $(SYMLINK) $(CONFFILE_SOFTLINK) $@
+
 
 #
 #	Include common targets.
