--- a/usr/src/Makefile.lint
+++ b/usr/src/Makefile.lint
@@ -67,6 +67,7 @@ COMMON_SUBDIRS = \
 	cmd/cksum \
 	cmd/clinfo \
 	cmd/cmd-crypto \
+	cmd/cmd-inet/lib \
 	cmd/cmd-inet/sbin \
 	cmd/cmd-inet/usr.bin \
 	cmd/cmd-inet/usr.lib/dsvclockd \
