--- a/usr/src/cmd/svc/milestone/Makefile
+++ b/usr/src/cmd/svc/milestone/Makefile
@@ -19,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
@@ -103,6 +103,7 @@ SVCMETHOD=\
 	manifest-import \
 	net-loopback \
 	net-init \
+	net-nwam \
 	net-physical \
 	net-routing-setup \
 	net-svc \
