6533678 dtrace incorrectly resumes execution in the middle of 2-byte int 3 instructions 6533954 kmdb destroys usermode GSBASE when entering 6534035 dtrace_user_probe fails to consider alternate code selectors when checking for int3 6534061 amd64 DEBUG kernel's __SAVE_REGS should save the {gs,fs}base registers 6534200 syscall rewriting code is not thread-safe 6534218 Incorrect ASSERT logic in prnldt induces panic 6534277 syscall rewriting code in trap() should be aware of alternate segment selectors

--- a/usr/src/uts/intel/amd64/ml/mach_offsets.in
+++ b/usr/src/uts/intel/amd64/ml/mach_offsets.in
@@ -77,6 +77,10 @@ regs	REGSIZE
 	r_r13	REGOFF_R13
 	r_r14	REGOFF_R14
 	r_r15	REGOFF_R15
+\#if DEBUG
+	__r_fsbase	REGOFF_FSBASE
+	__r_gsbase	REGOFF_GSBASE
+\#endif
 	r_ds	REGOFF_DS
 	r_es	REGOFF_ES
 	r_fs	REGOFF_FS
