--- a/usr/src/uts/sun4v/io/ds_snmp.conf
+++ b/usr/src/uts/sun4v/io/ds_snmp.conf
@@ -18,36 +18,11 @@
 #
 # CDDL HEADER END
 #
-
 #
 # Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-# ident	"%Z%%M%	%I%	%E% SMI"
+#ident	"%Z%%M%	%I%	%E% SMI"
 #
 
-#
-# cmd/picl/plugins/sun4v/Makefile
-#
-
-SUBDIRS= lib .WAIT snmp .WAIT mdesc pri ontario
-
-MSGSUBDIRS=	snmp
-
-all :=		TARGET= all
-install :=	TARGET= install
-clean :=	TARGET= clean
-clobber :=	TARGET= clobber
-lint :=		TARGET= lint
-_msg :=		TARGET= _msg
-
-.KEEP_STATE:
-
-all install clean clobber lint : $(SUBDIRS)
-
-_msg:	$(MSGSUBDIRS)
-
-$(SUBDIRS): FRC
-	@cd $@; pwd; $(MAKE) $(TARGET)
-
-FRC:
+name="ds_snmp" parent="pseudo" instance=0;
