6513538 Need to update ON dictionaries for faults that go from SP to Solaris 6536564 Oberon bus addresses seem to have changed from decimal to hex, breaks IO FMA

--- a/usr/src/cmd/fm/dicts/Makefile
+++ b/usr/src/cmd/fm/dicts/Makefile
@@ -19,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
@@ -40,6 +40,7 @@ i386_DCNAMES = \
 	AMD
 
 sparc_DCNAMES = \
+	SCF \
 	SUN4 \
 	SUN4U \
 	SUN4V
