6484266 fasttrap needs to check for duplicate offsets 6497891 dtrace -G can fail due to uninitialized data 6504328 mapid disabling isn't enough 6512813 calendar-based DTrace tests fail when not in US/Pacific 6513027 tst.[v]fork.d needs updating for forksys() 6534984 fasttrap emulation code could use some work 6534988 remove the lint work-around from fasttrap 6534991 prepare the DTrace test suite for PIT

--- a/usr/src/cmd/dtrace/test/Makefile
+++ b/usr/src/cmd/dtrace/test/Makefile
@@ -20,12 +20,28 @@
 #
 
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-#ident	"%Z%%M%	%I%	%E% SMI"
+# ident	"%Z%%M%	%I%	%E% SMI"
 
 include $(SRC)/Makefile.master
 
-SUBDIRS = cmd tst pkg
-include $(SRC)/cmd/dtrace/test/Makefile.subdirs
+SUBDIRS = cmd tst
+
+ROOTOPTPKG = $(ROOT)/opt/SUNWdtrt
+
+include Makefile.subdirs
+
+install: $(ROOTOPTPKG)/README $(SUBDIRS)
+
+pkg: install
+	@cd $(PKGDEFS) pwd; $(MAKE) awk_pkginfo
+	@cd $(PKGDEFS)/SUNWdtrt; pwd; $(MAKE) install
+
+$(ROOTOPTPKG):
+	$(INS.dir)
+
+$(ROOTOPTPKG)/%: ./% $(ROOTOPTPKG)
+	$(RM) $@
+	$(CP) $< $@
