--- a/usr/src/cmd/dtrace/test/tst/common/Makefile
+++ b/usr/src/cmd/dtrace/test/tst/common/Makefile
@@ -23,40 +23,42 @@
 # Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-#ident	"%Z%%M%	%I%	%E% SMI"
+# ident	"%Z%%M%	%I%	%E% SMI"
+#
 
 include $(SRC)/Makefile.master
 include ../Makefile.com
 
-fasttrap/tst.fasttrap.exe := LIBS += -ldtrace
-fasttrap/tst.stack.exe := LIBS += -ldtrace
+fasttrap/tst.fasttrap.exe := LDLIBS += -ldtrace
+fasttrap/tst.stack.exe := LDLIBS += -ldtrace
 
-proc/tst.sigwait.exe := LIBS += -lrt
+proc/tst.sigwait.exe := LDLIBS += -lrt
 
-sysevent/tst.post.exe := LIBS += -lsysevent
-sysevent/tst.post_chan.exe := LIBS += -lsysevent
+sysevent/tst.post.exe := LDLIBS += -lsysevent
+sysevent/tst.post_chan.exe := LDLIBS += -lsysevent
 
 ustack/tst.bigstack.exe := COPTFLAG += -xO1
 
-GCC = /usr/sfw/bin/gcc
-GCCFLAGS_sparc = -mcpu=ultrasparc
-GCCFLAGS = $(GCCFLAGS_$(MACH))
+GCC = $(ONBLD_TOOLS)/bin/$(MACH)/cw -_gcc
 
 pid/tst.gcc.exe: pid/tst.gcc.c
-	$(GCC) $(GCCFLAGS) -o pid/tst.gcc.exe pid/tst.gcc.c
+	$(GCC) -o pid/tst.gcc.exe pid/tst.gcc.c $(LDFLAGS)
+	$(POST_PROCESS) ; $(STRIP_STABS)
 
 usdt/tst.args.exe: usdt/tst.args.o usdt/args.o
-	$(CC) -o usdt/tst.args.exe usdt/tst.args.o usdt/args.o
+	$(LINK.c) -o usdt/tst.args.exe usdt/tst.args.o usdt/args.o $(LDLIBS)
+	$(POST_PROCESS) ; $(STRIP_STABS)
 
 usdt/args.o: usdt/args.d usdt/tst.args.o
-	/usr/sbin/dtrace -G -32 -o usdt/args.o -s usdt/args.d usdt/tst.args.o
+	$(COMPILE.d) -o usdt/args.o -s usdt/args.d usdt/tst.args.o
 
 usdt/tst.argmap.exe: usdt/tst.argmap.o usdt/argmap.o
-	$(CC) -o usdt/tst.argmap.exe usdt/tst.argmap.o usdt/argmap.o
+	$(LINK.c) -o usdt/tst.argmap.exe usdt/tst.argmap.o usdt/argmap.o \
+		$(LDLIBS)
+	$(POST_PROCESS) ; $(STRIP_STABS)
 
 usdt/argmap.o: usdt/argmap.d usdt/tst.argmap.o
-	/usr/sbin/dtrace -G -32 -o usdt/argmap.o -s usdt/argmap.d \
-		usdt/tst.argmap.o
+	$(COMPILE.d) -o usdt/argmap.o -s usdt/argmap.d usdt/tst.argmap.o
 
 SUBDIRS = java_api
 include ../../Makefile.subdirs
