--- a/usr/src/cmd/dtrace/test/cmd/baddof/Makefile
+++ b/usr/src/cmd/dtrace/test/cmd/baddof/Makefile
@@ -20,12 +20,12 @@
 #
 
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-#ident	"%Z%%M%	%I%	%E% SMI"
+# ident	"%Z%%M%	%I%	%E% SMI"
 
-include $(SRC)/Makefile.master
+include $(SRC)/cmd/Makefile.cmd
 
 .KEEP_STATE:
 
