--- a/usr/src/cmd/dtrace/test/cmd/badioctl/Makefile
+++ b/usr/src/cmd/dtrace/test/cmd/badioctl/Makefile
@@ -20,12 +20,12 @@
 #
 
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-#ident	"%Z%%M%	%I%	%E% SMI"
+# ident	"%Z%%M%	%I%	%E% SMI"
 
-include $(SRC)/Makefile.master
+include $(SRC)/cmd/Makefile.cmd
 
 .KEEP_STATE:
 
@@ -34,7 +34,6 @@ ROOTBIN = $(ROOTOPTPKG)/bin
 
 LDFLAGS += -znodefs -ztextoff
 LDLIBS = $(LDLIBS.cmd)
-LDLIBS += -ldtrace
 
 SRCS = badioctl
 CMDS = $(SRCS:%=$(ROOTBIN)/%)
