--- a/usr/src/pkgdefs/Makefile.targ
+++ b/usr/src/pkgdefs/Makefile.targ
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -19,19 +18,24 @@
 #
 # CDDL HEADER END
 #
+
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-#ident	"%Z%%M%	%I%	%E% SMI"
+# ident	"%Z%%M%	%I%	%E% SMI"
 #
 
 pkginfo: pkginfo.tmpl $(PKGDEFS)/awk_pkginfo
 	$(RM) $@; nawk -f $(PKGDEFS)/awk_pkginfo $@.tmpl > $@
 
 pkg: $(PKGARCHIVE) FRC
-	pkgmk -f prototype_$(MACH) -d $(PKGARCHIVE) -r "$(ROOT) $(PARENT_ROOT)" \
-		-o $(PACKAGE)
+	pkgmk -f prototype_$(MACH) -d $(PKGARCHIVE) \
+	    -r "$(ROOT) $(PARENT_ROOT)" -o $(PACKAGE)
+
+optpkg: $(PKGARCHIVE) FRC
+	pkgmk -f prototype_$(MACH) -d $(PKGARCHIVE) \
+	    -r "$(ROOT) $(PARENT_ROOT)" -b opt -o $(PACKAGE)
 
 $(PKGARCHIVE):
 	[ -d $(PKGARCHIVE) ] || mkdir -p $(PKGARCHIVE)
