--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -1379,7 +1379,8 @@ NXGE_OBJS =	nxge_mac.o nxge_ipp.o nxge_rxdma.o 		\
 		nxge_hw.o nxge_fzc.o nxge_virtual.o		\
 		nxge_send.o nxge_classify.o nxge_fflp.o		\
 		nxge_fflp_hash.o nxge_ndd.o nxge_kstats.o	\
-		nxge_zcp.o nxge_fm.o nxge_espc.o
+		nxge_zcp.o nxge_fm.o nxge_espc.o		\
+		nxge_serialize.o
 
 NXGE_NPI_OBJS =	\
 		npi.o npi_mac.o	npi_ipp.o			\
