--- a/usr/src/uts/sparc/sharefs/Makefile
+++ b/usr/src/uts/sparc/sharefs/Makefile
@@ -1,4 +1,3 @@
-#!/sbin/sh
 #
 # CDDL HEADER START
 #
@@ -25,19 +24,64 @@
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
 #
-#	Copyright (c) 1984, 1986, 1987, 1988, 1989 AT&T
-#	  All Rights Reserved
-
+#	This makefile drives the production of the sharetab file system
+#	kernel module.
+#
+#	sparc architecture dependent
 #
 
-echo "#device		device		mount		FS	fsck	mount	mount
-#to mount	to fsck		point		type	pass	at boot	options
 #
-/devices	-		/devices	devfs	-	no	-
-/proc		-		/proc		proc	-	no	-
-ctfs		-		/system/contract ctfs	-	no	-
-objfs		-		/system/object	objfs	-	no	-
-sharefs		-		/etc/dfs/sharetab	sharefs	-	no	-
-fd		-		/dev/fd		fd	-	no	-
-swap		-		/tmp		tmpfs	-	yes	-
-">vfstab
+#	Path to the base of the uts directory tree (usually /usr/src/uts).
+#
+UTSBASE	= ../..
+
+#
+#	Define the module and object file sets.
+#
+MODULE		= sharefs
+OBJECTS		= $(SHAREFS_OBJS:%=$(OBJS_DIR)/%)
+LINTS		= $(SHAREFS_OBJS:%.o=$(LINTS_DIR)/%.ln)
+ROOTMODULE	= $(ROOT_FS_DIR)/$(MODULE)
+
+#
+#	Include common rules.
+#
+include $(UTSBASE)/sparc/Makefile.sparc
+
+#
+#	Define targets
+#
+ALL_TARGET	= $(BINARY)
+LINT_TARGET	= $(MODULE).lint
+INSTALL_TARGET	= $(BINARY) $(ROOTMODULE)
+
+#
+#	Overrides.
+#
+CFLAGS		+= $(CCVERBOSE)
+
+#
+#	Default build targets.
+#
+.KEEP_STATE:
+
+def:		$(DEF_DEPS)
+
+all:		$(ALL_DEPS)
+
+clean:		$(CLEAN_DEPS)
+
+clobber:	$(CLOBBER_DEPS)
+
+lint:		$(LINT_DEPS)
+
+modlintlib:	$(MODLINTLIB_DEPS)
+
+clean.lint:	$(CLEAN_LINT_DEPS)
+
+install:	$(INSTALL_DEPS)
+
+#
+#	Include common targets.
+#
+include $(UTSBASE)/sparc/Makefile.targ
