6535388 warlock build fails for dad due to move from closed area

--- a/usr/src/uts/sparc/warlock/Makefile
+++ b/usr/src/uts/sparc/warlock/Makefile
@@ -18,7 +18,7 @@
 #
 # CDDL HEADER END
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -87,7 +87,7 @@ warlock.usb:
 	@cd ../usbskel; make clean; $(MAKE) warlock
 
 warlock.scsi:
-	@cd $(CLOSED)/uts/sparc/dad; make clean; $(MAKE) warlock
+	@cd ../dad; make clean; $(MAKE) warlock
 	@cd ../dada; make clean; $(MAKE) warlock
 	@cd ../esp; make clean; $(MAKE) warlock
 	@cd ../fas; make clean; $(MAKE) warlock
