--- a/usr/src/lib/libpam/pam.conf
+++ b/usr/src/lib/libpam/pam.conf
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -22,7 +21,7 @@
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # PAM configuration
@@ -55,8 +54,7 @@ rlogin	auth required		pam_unix_auth.so.1
 # Kerberized rlogin service
 #
 krlogin	auth required		pam_unix_cred.so.1
-krlogin	auth binding		pam_krb5.so.1
-krlogin	auth required		pam_unix_auth.so.1
+krlogin	auth required		pam_krb5.so.1
 #
 # rsh service (explicit because of pam_rhost_auth,
 # and pam_unix_auth for meaningful pam_setcred)
@@ -67,14 +65,12 @@ rsh	auth required		pam_unix_cred.so.1
 # Kerberized rsh service
 #
 krsh	auth required		pam_unix_cred.so.1
-krsh	auth binding		pam_krb5.so.1
-krsh	auth required		pam_unix_auth.so.1
+krsh	auth required		pam_krb5.so.1
 #
 # Kerberized telnet service
 #
 ktelnet	auth required		pam_unix_cred.so.1
-ktelnet	auth binding		pam_krb5.so.1
-ktelnet	auth required		pam_unix_auth.so.1
+ktelnet	auth required		pam_krb5.so.1
 #
 # PPP service (explicit because of pam_dial_auth)
 #
