6542560 Implement LDC dcmds and walkers for improved debugging

--- a/usr/src/cmd/mdb/sun4v/modules/ldc/Makefile
+++ b/usr/src/cmd/mdb/sun4v/modules/ldc/Makefile
@@ -23,8 +23,8 @@
 # Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-#ident	"%Z%%M%	%I%	%E% SMI"
+# ident	"%Z%%M%	%I%	%E% SMI"
 #
 
-SUBDIRS = unix vdsk ldc
-include ../../Makefile.subdirs
+SUBDIRS = v9
+include ../../../Makefile.subdirs
