6542480 fix for 6534991 broke the nightly build with gcc

--- a/usr/src/cmd/dtrace/test/tst/i386/Makefile
+++ b/usr/src/cmd/dtrace/test/tst/i386/Makefile
@@ -28,7 +28,7 @@
 
 include ../Makefile.com
 
-ASFLAGS += -D_ASM -P $(CPPFLAGS)
+ASFLAGS += -P -D_ASM $(CPPFLAGS)
 CLOBBER_FILES += helper_helper.o annotated_helper.o
 
 # For the helper test we require an executable data section.
