PSARC/2007/162 Backtrace() and friends for Solaris 6536146 libc should provide glibc-compatible backtrace() functions

--- a/usr/src/head/Makefile
+++ b/usr/src/head/Makefile
@@ -65,6 +65,7 @@ HDRS=   $($(MACH)_HDRS)  $(ATTRDB_HDRS) \
 	euc.h		\
 	exacct.h	\
 	exacct_impl.h	\
+	execinfo.h	\
 	fatal.h		\
 	fcntl.h		\
 	float.h		\
