--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -429,6 +429,8 @@ PTY_OBJS +=	ptms_conf.o
 
 SAD_OBJS +=	sad.o
 
+MD4_OBJS +=	md4.o md4_mod.o
+
 MD5_OBJS +=	md5.o md5_mod.o
 
 SHA1_OBJS +=	sha1.o sha1_mod.o
