--- a/usr/src/uts/sun4u/Makefile.sun4u.shared
+++ b/usr/src/uts/sun4u/Makefile.sun4u.shared
@@ -186,6 +186,7 @@ IMPLEMENTATIONS		+= lw8 .WAIT
 IMPLEMENTATIONS		+= makaha .WAIT
 IMPLEMENTATIONS		+= opl .WAIT
 IMPLEMENTATIONS		+= lw2plus .WAIT
+IMPLEMENTATIONS		+= douglas .WAIT
 
 $(CLOSED_BUILD)CLOSED_IMPLEMENTATIONS	= chalupa .WAIT
 $(CLOSED_BUILD)CLOSED_IMPLEMENTATIONS	+= ents .WAIT
