PSARC 2006/703 MPxIO extension for Serial Attached SCSI (SAS) on mpt(7D) PSARC 2007/046 stmsboot(1M) extension for mpt(7D) 6442215 mpt.conf maybe over written because the filetype within the SUNWckr package is 'f' 6443044 add mpxio support to SAS mpt driver 6502231 stmsboot needs to support SAS devices 6510425 the properties "flow_control" and "queue" in mpt.conf is useless 6525558 untagged command unlikely to be sent to HBA during heavy I/O 6545198 build should allow architecture dependent class action scripts

--- a/usr/src/pkgdefs/SUNWckr/Makefile
+++ b/usr/src/pkgdefs/SUNWckr/Makefile
@@ -19,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -28,7 +28,7 @@
 include ../Makefile.com
 
 DATAFILES +=	i.etcsystem i.kcfconfbase i.manifest i.preserve i.renameold \
-		i.scsivhciconf
+		i.scsivhciconf i.mptconf
 
 MACHDATAFILES += i.sdconf
 CLOBBERFILES += $(MACHDATAFILES)
